ADDED LITTLE THINGS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header2">
 
         <nav id="nav">
-            <h1>Des objets connectés<br/> autonomes</h1>
+            <h1>Des objets<br/> connectés<br/> autonomes</h1>
             <ul id="menu">
                 <li><a href="presentation.html">Présentation</a></li>
                 <li><a>Expérimentations</a>
