--- a/piezo.html
+++ b/piezo.html
@@ -77,9 +77,9 @@
 
 <h3>Conclusion sur la piezoélectricité :</h3>
 
-<p>Nous avons vu grace à nos expériences que l'on peut en effet produire de l'énergie grâce à des cellules piezoélectriques. Cependant, elles sont trop peu efficaces afin d'être utilisées dans le cadre d'un usage personnel.<br/> Malgré cela, nous pourrions
-    envisager des routes ou même un sol très féquenté bardé de cellules piezoélectriques. La contrainte mécanique d'une foule ou de plusieures voitures serait suffisante afin de recharger des objets connectés dans des points de recharge libres ou même
-    pour alimenter l'éclairage public.</p>
+<p>Nous avons vu grace à nos expériences que l'on peut en effet produire de l'énergie grâce à des cellules piezoélectriques. Cependant, elles sont trop peu efficaces afin d'être utilisées dans le cadre d'un usage personnel. Nous pouvons cependant envisager
+    l'utilisation de capacitors afin d'accumuler de l'énergie pour alimenter de manière ponctuelle un objet connecté.<br/> Pour aller plus loin, nous pourrions envisager des routes ou même un sol très féquenté bardé de cellules piezoélectriques. La contrainte
+    mécanique d'une foule ou de plusieures voitures serait suffisante afin d'alimenter des objets connectés ou même pour alimenter l'éclairage public.</p>
 
 
 <h3>Applications :</h3>
