--- a/presentation.html
+++ b/presentation.html
@@ -41,8 +41,8 @@
 <p style="width:72%;float:left;">"La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique"<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub></p>
 <img style="width:20%;float:right;" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/SchemaPiezo.gif" />
 <h4>Exemple :</h4>
-<p style="width:72%;float:left;">Les applications de cette énergie sont immenses, et trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course utiliser l'énergie produite par la course pour alimenter un
-    bracelet connecté qui se chargerait de collecter les données sur cette même course.</p>
+<p style="width:72%;float:left;">Les applications de cette énergie sont immenses, et trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course utiliser l'énergie produite par son activité pour alimenter
+    un bracelet connecté qui se chargerait de collecter les données sur la personne.</p>
 
 
 
