--- a/presentation.html
+++ b/presentation.html
@@ -55,4 +55,5 @@
 <p style="width:72%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corps conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<br/><sub>Source : <a href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub></p>
 <img style="width:20%;float:right;" src="seebeck.bmp" />
 <h4>Exemple :</h4>
-<p style="width:72%;float:left;"></p>
+<p style="width:72%;float:left;">Il y a de très nombreuses applications possibles pour cette réaction. On pourrait imaginer des bracelets connectés pour le sport, avec une face en contact avec la peau du sportif et l'autre face qui serait donc moins chaude. On pourrait ainsi récupérer
+    l'énergie produite par la chaleur du corps humain. Nous pourrions aussi envisager des modules à effet Peltier intégrés à des vitres, la différence de température intérieur/extérieur serait une source substentielle d'énergie.</p>
