--- a/presentation.html
+++ b/presentation.html
@@ -20,7 +20,7 @@
 
 <img style="width:20%;float:right;" src="ionexploding.jpg" />
 <hr/>
-<h3>L'effet photovoltaïque</h3>
+<h3>L'effet Photovoltaïque</h3>
 
 <h4>Définition :</h4>
 
@@ -35,7 +35,7 @@
 <hr/>
 
 
-<h3>La piezoélectricité</h3>
+<h3>La Piezoélectricité</h3>
 
 <h4>Définition :</h4>
 <p style="width:72%;float:left;">"La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique"<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub></p>
@@ -49,11 +49,11 @@
 <hr/>
 
 
-<h3>L'effet seebeck</h3>
+<h3>L'effet Seebeck</h3>
 
 <h4>Définition :</h4>
 <p style="width:72%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corps conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<br/><sub>Source : <a href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub></p>
 <img style="width:20%;float:right;" src="seebeck.bmp" />
 <h4>Exemple :</h4>
 <p style="width:72%;float:left;">Il y a de très nombreuses applications possibles pour cette réaction. On pourrait imaginer des bracelets connectés pour le sport, avec une face en contact avec la peau du sportif et l'autre face qui serait donc moins chaude. On pourrait ainsi récupérer
-    l'énergie produite par la chaleur du corps humain. Nous pourrions aussi envisager des modules à effet Peltier intégrés à des vitres, la différence de température intérieur/extérieur serait une source substentielle d'énergie.</p>
+    l'énergie produite par la chaleur du corps humain. Nous pourrions aussi envisager des modules à effet Seebeck intégrés à des vitres, la différence de température intérieur/extérieur serait une source substentielle d'énergie.</p>
