--- a/piezo.html
+++ b/piezo.html
@@ -48,7 +48,7 @@
 
 <p id="mat">Cellule piezoélectrique :<br/><img src="data/piezo/piezo.jpg" />
     <br/> Centrale Latis :<br/><img src="data/piezo/latis.jpg" />
-    <br/> Ampèremètre :<br/><img src="" />
+    <br/> Ampèremètre :<br/><img src="data/piezo/ampere.jpg" />
     <br/> Du scotch :<br/><img src="data/piezo/scotch.jpg" />
     <br/> et Bilal :<br/><img src="data/bilal.jpg" /><br/>
 </p>
