changement du message

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <hr/>
     <section id="content">
         <h3>
-            <center>Ce site doit se lancer avec firefox.</center>
+            <center>Ce site nécessite d'être lancé avec firefox pour fonctionner correctement.</center>
         </h3>
     </section>
     <hr/>
