--- a/seebeck.html
+++ b/seebeck.html
@@ -31,6 +31,43 @@
     <img height="400px" src="data/seebeck/mesureseebeck.jpg" /></p>
 
 <h4>Résultats :</h4>
+<table border="1">
+    <tr>
+        <th>&Delta;t (en K)</th>
+        <th>U (en V)</th>
+        <tr>
+            <td>0</td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>0,21</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>0,24</td>
+        </tr>
+        <tr>
+            <td>14,2</td>
+            <td>0,43</td>
+        </tr>
+        <tr>
+            <td>18</td>
+            <td>0,55</td>
+        </tr>
+        <tr>
+            <td>25</td>
+            <td>0,75</td>
+        </tr>
+        <tr>
+            <td>27,2</td>
+            <td>0,84</td>
+        </tr>
+        <tr>
+            <td>30</td>
+            <td>0,82</td>
+        </tr>
+</table>
 <p><img src="graph/seebeck/dtu.png" /></p>
 
 <hr/>
