--- a/seebeck.html
+++ b/seebeck.html
@@ -99,4 +99,4 @@
 
 <h4>Thermostat :</h4>
 
-<p></p>
+<p>On pourrait tout bettement utiliser un thermostat connecté qui utiliserait la chaleur du radiateur pour s'auto-alimenter. Il aurait une face sur le radiateur et l'autre vers l'intérieur de la pièce pour qu'il y ait une différence de température. Le problème est qu'il ne produit pas beaucoup avec une petite différence de température. Ce projet n'est pas vraiment envisageable due à la faible production du module et aux conditions nécéssaires.</p>
